--- a/Fundamentals/meson.build
+++ b/Fundamentals/meson.build
@@ -1,5 +1,8 @@
+# Please keep it sorted (use sort(1) command)
+subdir('basename')
+subdir('dirname')
+subdir('echo')
 subdir('kill')
+subdir('printf')
 subdir('uname')
 subdir('yes')
-subdir('dirname')
-subdir('basename')
