Tag executables as installable

--- a/Fundamentals/basename/meson.build
+++ b/Fundamentals/basename/meson.build
@@ -2,4 +2,6 @@ basename_sources = files(
   'Main.cxx'
 )
 
-executable('basename', basename_sources)
+executable('basename', basename_sources,
+  install: true
+)
