--- a/Fundamentals/printf/meson.build
+++ b/Fundamentals/printf/meson.build
@@ -2,4 +2,6 @@ printf_sources = files(
   'Main.c'
 )
 
-executable('printf', printf_sources)
+executable('printf', printf_sources,
+  install: true
+)
