--- a/Fundamentals/uname/meson.build
+++ b/Fundamentals/uname/meson.build
@@ -2,4 +2,6 @@ uname_sources = files(
   'Main.cxx'
 )
 
-executable('uname', uname_sources)
+executable('uname', uname_sources,
+  install: true
+)
