--- a/Fundamentals/meson.build
+++ b/Fundamentals/meson.build
@@ -2,7 +2,9 @@
 subdir('basename')
 subdir('dirname')
 subdir('echo')
+subdir('false')
 subdir('kill')
 subdir('printf')
+subdir('true')
 subdir('uname')
 subdir('yes')
